labs/lab12-network-policy/whoami-network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "whoami-network-policy"
spec:
  endpointSelector:
    matchLabels:
      app: whoami
  ingress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
      rules:
        http:
        - headers:
          - "X-Forwarded-For: 192.168.50.100,192.168.50.100" # Change the first IP
